showing body in swagger
